flux/apps/manyfold/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: manyfold

spec:
  selector:
    matchLabels:
      app: manyfold

  template:
    metadata:
      labels:
        app: manyfold

    spec:
      volumes:
        - name: models
          persistentVolumeClaim:
            claimName: models

        - name: database
          persistentVolumeClaim:
            claimName: database

      securityContext:
        fsGroup: 1000

      containers:
        - name: manyfold
          image: ghcr.io/manyfold3d/manyfold-solo:0.91.3
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 3214
              protocol: TCP

          volumeMounts:
            - mountPath: /config
              name: database
            - mountPath: /models
              name: models
