flux/apps/manyfold/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manyfold

spec:
  selector:
    app: manyfold

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
